service worker: Fix the type of an update promise reject value

This CL changes the type of the update promise reject value to be
TypeError (instead of AbortError or NetworkError) if the update promise
is rejected because an uncaught runtime script error occured during Run
Service Worker algorithm.

BUG=617881

Review-Url: https://codereview.chromium.org/2054203002
Cr-Commit-Position: refs/heads/master@{#404140}

Former-commit-id: fc99c082b8d4f4ef333aab1abf0f953e2b304ad0